--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^5.12.2",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
-    "socket.io": "^4.1.1"
+    "socket.io": "^4.1.1",
+    "dotenv": "9.0.2"
   },
   "devDependencies": {
     "faker": "^5.5.2"
