--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+APP_URL=http://localhost:3000
+
 MONGODB_URL=mongodb://11.5.0.4:27017/test
 MONGODB_USER=root
 MONGODB_PASSWORD=root
@@ -7,3 +9,5 @@ RABBITMQ_HOST=amqp://172.18.0.1
 RABBITMQ_PORT=5672
 RABBITMQ_USER=guest
 RABBITMQ_PASSWORD=guest
+
+JWT_SECRET=hajer_secret
