--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
+    "dotenv": "9.0.2",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "imgur": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
-    "socket.io": "^4.1.1",
-    "dotenv": "9.0.2"
+    "socket.io": "^4.1.1"
   },
   "devDependencies": {
     "faker": "^5.5.2"
